frepiFront/source/stylesheets/responsive-frepi.css
/**
 ** Responsiveness for Frepi
 **/

@media (max-width: 481px) {

  /* Profile rules */
  .profile #guide-status {
    display: block;
  }

  .status-tag {
    display: inline-block;
    width: 110px;
  }

  #status {
    margin: 0 auto;
    width: 220px;
  }

  .profile #guide-status #status span {
    margin-right: 0.4285em;
  }

  .profile #guide-status #status .label {
    margin-top: 0.3571em;
  }

  .profile .table tbody .truncated.label {
    display: inline-block;
  }

  .profile .table thead tr th:nth-of-type(3),
  .profile .table tbody tr td:nth-of-type(3),
  .profile .table .label {
    display: none;
  }

  .profile .segment .line .title {
    font-weight: bold;
    width: 30%;
  }

  .profile .segment .line .value {
    width: 70%;
  }

  .modal .buttons-to-right {
    padding: 0.1rem;
  }

  .card .header {
    font-size: 1em !important;
  }

  .card .extra.content {
    padding-top: 0;
    text-align: center;
  }

  .card .extra.content br {
    display: block;
  }

  .card .extra.content .button {
    float: none;
  }
}

@media only screen and (max-width: 767px){

  /**
   ** Generic rules
   **/
  .main-content {
    padding-top: 60px;
  }

  /* Request Error Message */
  .request-error {
    width: 85%;
  }

  /**
   ** Login rules
   **/

  .ui.stackable.grid>.column:not(.row) {
    padding: 1rem 2rem !important;
  }

  .login-main .sub.header {
    font-size: 1.1rem !important;
  }

  /**
   ** Store rules
   **/

  #store-frepi-logo {
    width: 4.285714em;
  }

  #store-frepi-logo .image {
    display: none;
  }

  #store-frepi-logo .icon {
    color: white;
    display: inline-block;
    font-size: 1.8571428em;
    left: 0.576923em;
    position: absolute;
    top: 0.8461538em;
  }

  #product-searcher {
    width: calc(100% - 8.928571em);
  }

  header #shopping-cart .icon {
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16);
    cursor: pointer;
    display: inline-block;
    font-size: 1.571428em;
    position: absolute;
    right: 0.318181em;
    top: 0.454545em;
  }

  /*#store-frepi-logo img {
    margin: 5px 0.25%;
  }*/

  #target-store,
  #user-account,
  #store-secondary-navbar {
    display: none;
  }
}

